--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang }}">
   {% include head.html %}
+  
+  <body class="{{ page.layout | prepend: 'layout-' }}">
+    {% include header.html %}
+    
+    <main class="site_easel">
+      <div class="content">
+        {{ content }}
+      </div>
+      
+      {% include sidebar.html %}
+    </main>
+    
+    {% include footer.html %}
+  </body>
 </html>
