--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
   {% seo %}
   {% feed_meta %}
   
-  <link rel="stylesheet" type="text/css" href="{{ 'assets/css/screen.css' | relative_path }}" />
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/screen.css' | relative_path }}" />
 </head>
