--- a/_sass/jekyll-theme-charlie/_layout.scss
+++ b/_sass/jekyll-theme-charlie/_layout.scss
@@ -13,6 +13,10 @@ html {
   box-sizing: inherit;
 }
 
+/*
+  Basic Structure
+*/
+
 body {
   display: flex;
   flex-flow: column nowrap;
@@ -46,11 +50,56 @@ body {
   }
   
   .branding {
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 0;
     grid-area: side;
+    
+    a {
+      display: block;
+    }
+    
+    img {
+      display: block;
+      max-height: 56px;
+      width: auto;
+    }
   }
   
   .masthead {
     grid-area: main;
+    display: inline-flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    
+    .site_title {
+      @include relative-font-size(2);
+      font-weight: bold;
+      line-height: 1.2;
+      margin-bottom: 0;
+      
+      a {
+        color: $color-details-darker;
+        
+        &:hover,
+        &:focus {
+          color: $color-details;
+        }
+        
+        img {
+          display: block;
+          max-height: 2rem;
+          width: auto;
+        }
+      }
+    }
+    
+    .site_tagline {
+      font-style: italic;
+      font-weight: lighter;
+      color: $color-details-darker;
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -58,7 +107,6 @@ body {
   Site Content
 */
 .site_easel {
-  
   @include media-query($on-palm) {
     grid-template-areas:
       "side side"
@@ -72,5 +120,58 @@ body {
   
   .sidebar {
     grid-area: side;
+  }
+}
+
+// Navigation
+.main_menu {
+  @media screen and (min-width: $on-palm) {
+    border-right: 1px solid $color-details-lighter;
+    padding-top: $spacing-unit / 2;
+    padding-bottom: $spacing-unit / 2;
+  }
+  
+  ul {
+    list-style: none;
+    
+    @include media-query($on-palm) {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: flex-start;
+      margin-left: -$spacing-unit / 2;
+      margin-right: -$spacing-unit / 2;
+      padding: $spacing-unit / 2;
+      margin-bottom: 0;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      -ms-overflow-style: -ms-autohiding-scrollbar;
+      
+      &::before,
+      &::after {
+        content: " ";
+        margin: auto;
+      }
+    }
+    
+    li {
+      font-weight: bold;
+      
+      @include media-query($on-palm) {
+        flex: 1 0 auto;
+        
+        &:not(:last-child) {
+          margin-right: $spacing-unit / 2;
+        }
+      }
+      
+      a {
+        color: $color-details-darker;
+        
+        &:hover,
+        &:focus {
+          color: $color-details;
+        }
+      }
+    }
   }
 }
