adds full theme structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,9 @@
     </main>
     
     {% include footer.html %}
+    
+    {% if content contains "iframe" %}
+      <script src="{{ '/assets/js/embeds.js' | relative_url }}"></script>
+    {% endif %}
   </body>
 </html>
