--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,21 @@
 <footer class="site_footer">
   <div class="wrapper">
-    <p>Lorem ipsum dolor sit amet.</p>
+    {%- if site.social.links -%}
+      <nav class="social">
+        {%- for item in site.social.links -%}
+          {% assign service = item | remove: "www." | remove: "https://" | split: "." | first %}
+          {% assign icon = service | append: '.svg' | prepend: 'icons/' %}
+          
+          <a class="social_item" href="{{- item -}}" rel="external" target="_blank">
+            {%- include {{ icon }} -%}
+          </a>
+          
+        {%- endfor -%}
+      </nav>
+    {%- endif -%}
+    
+    <div class="colophon">
+      {% include custom-footer.html %}
+    </div>
   </div>
 </footer>
