--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
-  {% if site.data.menus.main %}
+  {% if site.data.menu %}
     <nav class="main_menu">
       <ul>
-        {% for item in site.data.menus.main %}
+        {% for item in site.data.menu %}
           <li class="menu_item">
             <a href="{{ item.url }}" {% if item.external %}target="_blank" rel="external"{% endif %}>
               {{ item.title }}
@@ -12,4 +12,8 @@
       </ul>
     </nav>
   {% endif %}
+  
+  <aside class="widgets">
+    {% include custom-widgets.html %}
+  </aside>
 </div>
