--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,35 @@
 layout: default
 ---
 
-{{ content }}
+<article class="post">
+  {% if page.image %}
+    <figure class="content_cover">
+      <img src="{{ page.image.path | default: page.image }}" alt="{{ page.image.alt }}" />
+    </figure>
+  {% endif %}
+  
+  {% unless page.title == "" %}
+    <header class="content_header">
+      <h1 class="content_title">
+        {{ page.title }}
+      </h1>
+    </header>
+  {% endunless %}
+  
+  <div class="content_body">
+    {{ content }}
+  </div>
+  
+{% include post-footer.html post=page %}
+</article>
+
+{% if page.previous or page.next %}
+<nav class="pagination">
+  {% if page.previous %}
+    <a href="{{ page.previous.url | relative_url }}" rel="prev">{{ site.data.translate[site.lang].previous_post | default: "&larr; Previous post" }}</a>
+  {% endif %}
+  {% if page.next %}
+    <a href="{{ page.next.url | relative_url }}" rel="next">{{ site.data.translate[site.lang].next_post | default: "Próximo post &rarr;" }}</a>
+  {% endif %}
+  </nav>
+{% endif %}
