--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   {% seo %}
-  {% feed_meta %}
   
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/screen.css' | relative_path }}" />
+  <link rel="apple-touch-icon" type="image/png" href="{% link assets/images/apple-touch-icon.png %}" />
+  <link rel="icon" type="image/png" href="{% link assets/images/favicon.png %}" />
+  <link rel="shortcut icon" href="{% link assets/images/favicon.ico %}" />
+  {% feed_meta %}
 </head>
