adds rss link to the site footer

--- a/_includes/custom-footer.html
+++ b/_includes/custom-footer.html
@@ -1,3 +1,5 @@
 {% comment %}
-  Fill this file with everything you want to put in your site footer!
+  Replace this file with everything you want to put in your site footer!
 {% endcomment %}
+
+{{ site.description | markdownify }}
