--- a/_sass/jekyll-theme-charlie/_layout.scss
+++ b/_sass/jekyll-theme-charlie/_layout.scss
@@ -318,6 +318,13 @@ body {
   }
 }
 
+// 404
+.search_fields {
+  display: flex;
+  width: 100%;
+  margin-bottom: 5rem;
+}
+
 /*
   Site Footer
 */
