removes the height limit from the branding

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 {% capture site_branding %}
     <a href="{{ site.url }}">
-      <img class="site_logo" height="56" src="{{ site.logo | relative_path }}" alt="{{ site.title }}" />
+      <img class="site_logo" src="{{ site.logo | relative_path }}" alt="{{ site.title }}" />
     </a>
 {% endcapture %}
 
